--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,6 @@
 name: Test this action
 
-on: 
-  push:  
+on:
   pull_request:
 
 jobs:
@@ -13,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: |
-          sh test.sh
+          bash test.sh
